# ematico

./: .gitignore  README.md  app.py  pyproject.toml
data/: load.py
ematico/: app.py
ematico/layout/: components.py  figures.py  utils.py
ematico/pages/: history.py
layout/: components.py  figures.py  utils.py
pages/: history.py  home.py
